test/fail/exceptions/try_except_scoping_check.lly
#[
SyntaxError: v has not been declared.
Where: File "try_except_scoping_check.lly" at line 10
]#

# This isn't allowed, because 'v' cannot be guaranteed to be set.
try:
    var v = 10
except Exception:
    v = 11
